# CTF-writeups

./: README.md
0xFun CTF 2026/Malware Analysis 1/: README.md
0xFun CTF 2026/Schrodinger's Sandbox/: README.md
0xFun CTF 2026/TLSB/: README.md  solve.py
0xFun CTF 2026/The Slot Whisperer/: README.md  solve.py
0xFun CTF 2026/Tony Toolkit/: README.md
0xFun CTF 2026/Trapped/: README.md
0xL4ugh CTF 2025/HashCashSlash/: README.md  solve.py
0xL4ugh CTF 2025/Spare Me Some Change/: README.md
0xL4ugh CTF 2026/iUseArchBTW/: README.md
2025/CSIT CTF Challenge 2025/: README.md
2025/Gryphons CTF 2025/: README.md
2025/TISC 2025/: README.md
2026/GPN CTF 2026/restaurant-builder/src/src/: main.py  pyproject.toml
2026/LNC 2026/: README.md
2026/VishwaCTF'2026/: README.md
Advent of CTF 2025/Dec 1 - The Mission Begins/: solve.py
Advent of CTF 2025/Dec 11 - Syndiware/: README.md  reverse_enc.py
Advent of CTF 2025/Dec 12 - Re-Key-very/: solve.py
Advent of CTF 2025/Dec 14 - Multifactorial/: README.md  stage2.py  stage3.py
Advent of CTF 2025/Dec 2 - The First Strike/: README.md
Advent of CTF 2025/Dec 4 - The Elfs Wager/: README.md  solve.py
Advent of CTF 2025/Dec 5 - Kramazon/: solve.py
Advent of CTF 2025/Dec 7 - Failed Exfil/: solve.py
Advent of CTF 2025/Dec 8 - Log Folly/: README.md  solve.py
Advent of CTF 2025/Dec 9 - Time To Escalate/: README.md
BlahajCTF 2025/: solve.py
CDDC 2025 Finals/pyjsjail/: README.md  solve.py
CSIT CTF Challenge 2025/: README.md
CTFlearn/Grid It!/: solve.py  (+1 more)
OverTheWire Natas/: passwords.txt
TISC 2025/: README.md
(+1348 files in other folders)
